--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon dist/app.js"
+    "test": "jest",
+    "dev": "nodemon dist/app.js",
+    "build": "tsc -p .",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +16,10 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
+    "jest": "^29.5.0",
     "tslint": "^6.1.3",
     "typescript": "^5.0.2"
   },
