--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ github.sha }}
+          tags: iv4npc/ontaz-api-ts:${{ github.sha }}
           labels: ${{ github.sha }}
 
   deploy:
